--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,14 @@
 plugins {
     alias(libs.plugins.android.application)
+    id "org.sonarqube" version "6.0.1.5171"
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "SE-II-group-new_testing-2"
+        property "sonar.organization", "se-ii-group-new"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 android {
