--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,6 @@ tasks.named("build").configure {
     finalizedBy logClasspath
 }
 
-tasks.named("sonarqube").configure {
+tasks.named("sonar").configure {
     dependsOn logClasspath
 }
