--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath("org.apache.commons:commons-compress:1.27.1")
+    }
+}
+
 plugins {
     alias(libs.plugins.android.application)
     id "org.sonarqube" version "6.0.1.5171"
